Parameterized nginx version in spec

--- a/nginx-mod-njs.spec.in
+++ b/nginx-mod-njs.spec.in
@@ -6,7 +6,7 @@ Vendor: Artera
 URL: https://nginx.org/en/docs/njs_about.html
 
 %define _modname            njs
-%define _nginxver           1.16.1
+%define _nginxver           @NGINXVER@
 %define nginx_config_dir    %{_sysconfdir}/nginx
 %define nginx_build_dir     %{_builddir}/nginx-%{_nginxver}
 
