Fixed use of pcre2

--- a/nginx-mod-njs.spec.in
+++ b/nginx-mod-njs.spec.in
@@ -25,7 +25,7 @@ BuildRequires: libtool
 BuildRequires: autoconf
 BuildRequires: automake
 BuildRequires: openssl%{?openssl_pkgversion}-devel
-BuildRequires: pcre-devel
+BuildRequires: pcre2-devel
 BuildRequires: zlib-devel
 BuildRequires: perl-devel
 BuildRequires: gd-devel
@@ -64,11 +64,10 @@ mv build/njs %{_builddir}/
 cd %{_builddir}/nginx-%{_nginxver}
 ./configure \
     --with-compat \
-    --with-stream \
+    --with-stream=dynamic \
     --with-http_ssl_module \
     --with-openssl-opt=enable-ktls \
     --with-http_v2_module \
-    --with-cc-opt="%{optflags} $(pcre2-config --cflags)" \
     --add-dynamic-module=../njs-%{version}/nginx
 make modules
 
